--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,23 +28,28 @@
             android:id="@+id/devText" app:layout_constraintStart_toEndOf="@+id/logo"
             app:layout_constraintTop_toBottomOf="@+id/banner"
             android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp"
-            android:fontFamily="@font/muli_extralight"/>
+            android:fontFamily="@font/muli_extrabold" android:textSize="22sp"/>
     <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp" app:srcCompat="@drawable/camerabutton"
-            tools:layout_editor_absoluteY="244dp" android:id="@+id/imageView3"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/imageView4"/>
+            android:id="@+id/imageView3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView4"
+            android:layout_marginTop="125dp" app:layout_constraintTop_toBottomOf="@+id/logo"/>
     <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp" app:srcCompat="@drawable/favoritebutton"
-            tools:layout_editor_absoluteY="244dp" android:id="@+id/imageView4"
+            android:id="@+id/imageView4"
             app:layout_constraintStart_toEndOf="@+id/imageView3" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/imageView5"/>
+            app:layout_constraintEnd_toStartOf="@+id/imageView5" app:layout_constraintTop_toTopOf="@+id/imageView3"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView3" app:layout_constraintVertical_bias="0.0"
+            android:layout_marginLeft="65dp" android:layout_marginStart="65dp"/>
     <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp" app:srcCompat="@drawable/inboxbutton"
-            tools:layout_editor_absoluteY="244dp" android:id="@+id/imageView5"
+            android:id="@+id/imageView5"
             app:layout_constraintStart_toEndOf="@+id/imageView4" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/imageView4"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView4" app:layout_constraintVertical_bias="0.0"
+            android:layout_marginLeft="66dp" android:layout_marginStart="66dp"/>
 </android.support.constraint.ConstraintLayout>
