--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,26 +30,76 @@
             android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp"
             android:fontFamily="@font/muli_extrabold" android:textSize="22sp"/>
     <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp" app:srcCompat="@drawable/camerabutton"
             android:id="@+id/imageView3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+            app:layout_constraintEnd_toStartOf="@+id/imageView4"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView4"
-            android:layout_marginTop="125dp" app:layout_constraintTop_toBottomOf="@+id/logo"/>
+            app:layout_constraintTop_toTopOf="@+id/imageView4"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/camerabutton" />
     <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp" app:srcCompat="@drawable/favoritebutton"
             android:id="@+id/imageView4"
-            app:layout_constraintStart_toEndOf="@+id/imageView3" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/imageView5" app:layout_constraintTop_toTopOf="@+id/imageView3"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView3" app:layout_constraintVertical_bias="0.0"
-            android:layout_marginLeft="65dp" android:layout_marginStart="65dp"/>
-    <ImageView
             android:layout_width="50dp"
-            android:layout_height="50dp" app:srcCompat="@drawable/inboxbutton"
+            android:layout_height="50dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+            app:layout_constraintEnd_toStartOf="@+id/imageView5"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toTopOf="@+id/imageView5"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/favoritebutton" />
+    <ImageView
             android:id="@+id/imageView5"
-            app:layout_constraintStart_toEndOf="@+id/imageView4" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/imageView4"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView4" app:layout_constraintVertical_bias="0.0"
-            android:layout_marginLeft="66dp" android:layout_marginStart="66dp"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/imageView4"
+            app:layout_constraintTop_toBottomOf="@+id/logo"
+            app:srcCompat="@drawable/inboxbutton" />
+    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
+                                          android:id="@+id/guideline"
+                                          android:orientation="vertical"
+                                          app:layout_constraintGuide_percent="0.5"/>
+    <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp" app:srcCompat="@drawable/dataimage"
+            android:id="@+id/imageView6"
+            android:scaleType="centerCrop" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginRight="8dp"
+            app:layout_constraintDimensionRatio="1:1"/>
+    <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp" app:srcCompat="@drawable/imagesimage"
+            android:id="@+id/imageView7"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginLeft="32dp"
+            android:layout_marginTop="32dp" app:layout_constraintDimensionRatio="1:1"/>
+    <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp" app:srcCompat="@drawable/videosimage"
+            android:id="@+id/imageView8"
+            android:scaleType="centerCrop" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView6" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="@+id/imageView6" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="1:1"/>
+    <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp" app:srcCompat="@drawable/codeimage"
+            android:id="@+id/imageView9"
+            android:scaleType="centerCrop" app:layout_constraintStart_toStartOf="@+id/guideline"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView7" app:layout_constraintEnd_toEndOf="@+id/imageView7"
+            app:layout_constraintDimensionRatio="1:1"/>
 </android.support.constraint.ConstraintLayout>
