--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
             android:scaleType="centerCrop" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginRight="8dp"
-            app:layout_constraintDimensionRatio="1:1"/>
+            app:layout_constraintDimensionRatio="1:1" android:scrollbarSize="4dp"/>
     <ImageView
             android:layout_width="0dp"
             android:layout_height="0dp" app:srcCompat="@drawable/imagesimage"
